[tool.poetry]
name = "shipit"
version = "0.1.0"
description = ""
authors = ["beckynevin <beckynevin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^4.2.5"
seaborn = "^0.13.2"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
geopandas = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
